# microservice-checksum

./: Cargo.toml  LICENSE  README.md  Rocket.toml
src/: main.rs
