[package]
name = "microservice-checksum"
description = "An HTTP microservice that checksums its inputs."
tags = ["crc", "http", "microservice"]
version = "0.1.0"
authors = ["Tim McNamara <tim.mcnamara@canonical.com>"]
edition = "2018"

[dependencies]
crc = "^1.0.0"
rocket = "0.4.1"
rocket_codegen = "0.4.1"
#serde = "1.0"
#serde_json = "1.0"
#serde_derive = "1.0"
#json = "0.11"
#env_logger = "0.6"

[badges]
maintenance = { status = "actively-maintained" }

[profile.release]
lto = true
codegen-units = 4
debug-assertions = true
linker-plugin-lto = true